# LabelingMachine

./: .gitignore  CMakeLists.txt  LabelingMachine.pro  LabelingMachine_zh_CN.ts  README.md  Resource.qrc  app_win32.rc  help.txt
Inc/: ClientUI.h  Labels.h  ServerUI.h  TCP_Client.h  TCP_Server.h  aboutwindow.h  bandbox.h  bandboxview.h  classeditor.h  helpwindow.h  imagedata.h  labelingmaching.h  mainwindow.h  module.h  openvideo.h  publicdefine.h
Src/: ClientUI.cpp  ClientUI.ui  ServerUI.cpp  ServerUI.ui  TCP_Client.cpp  TCP_Server.cpp  aboutwindow.cpp  aboutwindow.ui  bandbox.cpp  bandboxview.cpp  classeditor.cpp  classeditor.ui  helpwindow.cpp  helpwindow.ui  imagedata.cpp  labelingmaching.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  module.cpp  module.ui  openvideo.cpp  openvideo.ui
modules/: CMakeLists.txt
modules/yoloV3_voc_mod/: ArgResolver.cpp  ArgResolver.h  CMakeLists.txt  main.cpp
